# tree-sitter-json5

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  grammar.ts  package.json  pyproject.toml  setup.py  tree-sitter.json  tsconfig.json  utils.js  utils.ts
bindings/c/: tree-sitter-json5.pc.in
bindings/c/tree_sitter/: tree-sitter-json5.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_json5/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterJson5Tests/: TreeSitterJson5Tests.swift
queries/: highlights.scm  highlights.scm.swp
src/: grammar.json  node-types.json  parser.c
test/corpus/: arrays.txt  basic.txt  comments.txt  edge-cases.txt  objects.txt  strings.txt
