[package]
name = "tree-sitter-json5"
description = "json5 grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "json5"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-json5"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
